# Plonky3

./: Cargo.toml
baby-bear/src/: baby_bear.rs
bf-fri/: Cargo.toml
bf-fri/benches/: fold_even_odd.rs
bf-fri/src/: error.rs  extension_mmcs.rs  fold_even_odd.rs  hash.rs  lib.rs  mmcs.rs  proof.rs  prover.rs  taptree.rs  verifier.rs
bf-fri/src/mmcs/: bf_mmcs.rs  extension_mmcs.rs  mod.rs  taptree.rs  taptree_mmcs.rs
bf-fri/tests/: fri.rs  pcs.rs
bf-scripts/: Cargo.toml  README.md
bf-scripts/src/: lib.rs
bf-scripts/src/fri/: bc_assign.rs  bit_comm.rs  bit_comm_u32.rs  bit_commitment.rs  bitcom.rs  bitcom_extension.rs  field.rs  leaf.rs  mod.rs  point.rs  winternitz.rs
bf-scripts/src/u31/: babybear.rs  mod.rs
bf-scripts/src/u31_ext/: babybear.rs  karatsuba.rs  karatsuba_complex.rs  m31.rs  mod.rs
bf-scripts/src/u32/: u32_std.rs
challenger/: Cargo.toml
challenger/src/: bf_challenger.rs  duplex_challenger.rs  lib.rs
commit/src/: mmcs.rs
commit/src/adapters/: extension_mmcs.rs
field/src/: challenger.rs  lib.rs
fri/src/: prover.rs  verifier.rs
fri/tests/: fri.rs
merkle-tree/src/: mmcs.rs
sha256/: Cargo.toml
sha256/src/: lib.rs
