[package]
name = "p3-challenger"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = { path = "../field" }
p3-util = { path = "../util" }
p3-maybe-rayon = { path = "../maybe-rayon" }
p3-symmetric = { path = "../symmetric" }
tracing = "0.1.37"
bitcoin = { git = "https://github.com/cyl19970726/rust-bitcoin", branch = "merge" }
num-bigint = { version = "0.4.3", default-features = false }
[dev-dependencies]
p3-goldilocks = { path = "../goldilocks" }
